--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-nextjs",
+  "name": "portfolio-nextjs",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.9.1",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-toggle": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "8.8.0",
