--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-simple-typewriter": "^3.0.1",
+    "react-ticker": "^1.3.1",
     "react-toggle": "^4.1.2"
   },
   "devDependencies": {
