--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-page-visibility": "^6.4.0",
     "react-simple-typewriter": "^3.0.1",
     "react-ticker": "^1.3.1",
     "react-toggle": "^4.1.2"
