--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-globe.gl": "^2.20.2",
     "react-icons": "^4.3.1",
     "react-page-visibility": "^6.4.0",
     "react-simple-typewriter": "^3.0.1",
