--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "gsap": "^3.9.1",
     "next": "12.0.9",
     "react": "17.0.2",
@@ -15,6 +16,7 @@
     "react-globe.gl": "^2.20.2",
     "react-icons": "^4.3.1",
     "react-page-visibility": "^6.4.0",
+    "react-popper": "^2.2.5",
     "react-simple-typewriter": "^3.0.1",
     "react-ticker": "^1.3.1",
     "react-toggle": "^4.1.2"
