--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gsap": "^3.9.1",
     "next": "12.0.9",
     "react": "17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-globe.gl": "^2.20.2",
     "react-icons": "^4.3.1",
