--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gsap": "^3.9.1",
+    "mongoose": "^6.2.2",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
