Keep on optimising the portfolio.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["components/*"],
-      "@/hooks/": ["hooks/"]
+      "@/components/*": ["components/*"]
     }
   }
 }
